--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fb-fishing-page",
+  "name": "fashionista",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@reduxjs/toolkit": "^2.2.2",
+    "6pp": "^1.1.15",
     "axios": "^1.6.7",
+    "country-state-city": "^3.2.1",
+    "framer-motion": "^11.0.8",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
