--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "6pp": "^1.1.15",
     "axios": "^1.6.7",
     "country-state-city": "^3.2.1",
+    "firebase": "^10.11.0",
     "framer-motion": "^11.0.8",
     "locomotive-scroll": "^5.0.0-beta.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "sheryjs": "^1.0.0-beta.0.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
