--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.11.0",
     "framer-motion": "^11.0.8",
     "locomotive-scroll": "^5.0.0-beta.11",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
